src/index.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,900&display=swap');
@tailwind base;
@tailwind components;
@tailwind utilities;

body {
  font-family: 'Roboto', sans-serif;
}

.shadow-left {
  box-shadow: rgb(15 16 17) 100px 0px 50px -30px inset;
}

/* HERO HOMEPAGE */
.hero::before {
  background: linear-gradient(0deg, #141414, hsla(0, 0%, 8%, 0.5));
  content: '';
  inset: 0;
  position: absolute;
}

/* PREMIRERE HOMEPAGE */
.premiere::before {
  background: linear-gradient(180deg, #141414, hsla(0, 0%, 8%, 0.5));
  content: '';
  inset: 0;
  position: absolute;
}

/* CAROUSELS  */
.carousel__card,
.carousel__card--mobile {
  width: 95% !important;
  height: 280px;
  cursor: grab;
  position: relative;
}
.dlc__card {
  height: 280px;
  padding: 0 5px;
}

.carousel__card:hover img,
.dlc__card:hover img {
  filter: brightness(50%);
  transform: scale(0.95);
}

.carousel__card:hover h3,
.dlc__card:hover h3 {
  opacity: 1;
  color: #fff;
}
.carousel__card h3,
.dlc__card h3 {
  opacity: 0;
}

.carousel__card:focus,
.carousel__card:active,
.carousel__card--mobile:active,
.carousel__card--mobile:focus .dlc__card:focus,
.dlc__card:active .gallery_card:focus,
.gallery_card.active {
  outline: none;
}

.thumbnail .slick-slide {
  width: 230px !important;
  margin: 0 10px !important;
}

.thumbnail .slick-track {
  display: flex;
  justify-content: center;
  align-items: center;
}

.gallery_card {
  height: 220px;
}

.dlc__carousel {
  width: 100%;
  margin: 0 auto;
}

.dlc__carousel .slick-slide {
  width: auto;
  max-width: 900px !important;
  margin: 0 auto;
}

.dlc__carousel .slick-track {
  display: flex;
}

/* WISHLIST PAGE */

.borderClearing {
  border: 1px solid rgb(21 128 61) !important;
}

.wishlist-title {
  writing-mode: vertical-lr;
  -webkit-writing-mode: vertical-lr;
  -ms-writing-mode: vertical-lr;
  position: relative;
}
.wishlist-title::after {
  content: '';
  display: block;
  width: 2px;
  height: 50%;
  margin: 0 auto;
  background-image: linear-gradient(120deg, #dc1414, #781010 100%);
}

/* DOTS LOADER */

.bouncing-loader > div {
  width: 50px;
  height: 50px;
  margin: 3px 6px;
  border-radius: 50%;
  background-image: linear-gradient(120deg, #dc1414, #781010 100%);
  opacity: 1;
  animation: bouncing-loader 0.6s infinite alternate;
}
@keyframes bouncing-loader {
  to {
    opacity: 0.1;
    transform: translateY(-16px);
  }
}

.bouncing-loader > div:nth-child(2) {
  animation-delay: 0.2s;
}

.bouncing-loader > div:nth-child(3) {
  animation-delay: 0.4s;
}

.error-container {
  background-color: #0a0a0a;
  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='400' height='400' viewBox='0 0 800 800'%3E%3Cg fill='none' stroke='%23781010' stroke-width='1'%3E%3Cpath d='M769 229L1037 260.9M927 880L731 737 520 660 309 538 40 599 295 764 126.5 879.5 40 599-197 493 102 382-31 229 126.5 79.5-69-63'/%3E%3Cpath d='M-31 229L237 261 390 382 603 493 308.5 537.5 101.5 381.5M370 905L295 764'/%3E%3Cpath d='M520 660L578 842 731 737 840 599 603 493 520 660 295 764 309 538 390 382 539 269 769 229 577.5 41.5 370 105 295 -36 126.5 79.5 237 261 102 382 40 599 -69 737 127 880'/%3E%3Cpath d='M520-140L578.5 42.5 731-63M603 493L539 269 237 261 370 105M902 382L539 269M390 382L102 382'/%3E%3Cpath d='M-222 42L126.5 79.5 370 105 539 269 577.5 41.5 927 80 769 229 902 382 603 493 731 737M295-36L577.5 41.5M578 842L295 764M40-201L127 80M102 382L-261 269'/%3E%3C/g%3E%3Cg fill='%23781010'%3E%3Ccircle cx='769' cy='229' r='5'/%3E%3Ccircle cx='539' cy='269' r='5'/%3E%3Ccircle cx='603' cy='493' r='5'/%3E%3Ccircle cx='731' cy='737' r='5'/%3E%3Ccircle cx='520' cy='660' r='5'/%3E%3Ccircle cx='309' cy='538' r='5'/%3E%3Ccircle cx='295' cy='764' r='5'/%3E%3Ccircle cx='40' cy='599' r='5'/%3E%3Ccircle cx='102' cy='382' r='5'/%3E%3Ccircle cx='127' cy='80' r='5'/%3E%3Ccircle cx='370' cy='105' r='5'/%3E%3Ccircle cx='578' cy='42' r='5'/%3E%3Ccircle cx='237' cy='261' r='5'/%3E%3Ccircle cx='390' cy='382' r='5'/%3E%3C/g%3E%3C/svg%3E");
}

/* RWD */

@media (min-width: 640px) {
  .fancy-undeline {
    background-image: linear-gradient(120deg, #dc1414, #781010 100%);
    background-repeat: no-repeat;
    background-size: 100% 0.3em;
    background-position: 0 80%;
    transition: background-size 0.25s ease-in;
  }

  .fancy-undeline:hover {
    background-size: 100% 88% !important;
  }
  .gallery_card {
    height: 200px;
  }
}

@media (min-width: 1024px) {
  /* Fullscreen Gallery */
  .slick-prev::before,
  .slick-next::before {
    font-size: 50px !important;
  }

  .slick-prev {
    left: -90px !important;
  }
  .slick-next {
    right: -55px !important;
  }
  .gallery_card {
    height: 220px;
  }
}

@media (min-width: 1280px) {
  /* Fullscreen Gallery */
  .slick-prev::before,
  .slick-next::before {
    font-size: 70px !important;
  }

  .slick-prev {
    left: -120px !important;
  }
  .slick-next {
    right: -65px !important;
  }
}

@media (min-width: 1536px) {
}

